--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -587,6 +587,17 @@ config INPUT_PWM_VIBRA
 	  To compile this driver as a module, choose M here: the module will be
 	  called pwm-vibra.
 
+config INPUT_RKXXX_PWRKEY
+	tristate "Rockchip RK8xx PMIC power key support"
+	depends on MFD_RK808
+	help
+	  Select this option to enable power key driver for RK805.
+
+	  If unsure, say N.
+
+	  To compile this driver as a module, choose M here: the module will be
+	  called rk8xx_pwrkey.
+
 config INPUT_RK805_PWRKEY
 	tristate "Rockchip RK805 PMIC power key support"
 	depends on MFD_RK808
