--- a/arch/arm64/boot/dts/rockchip/px30.dtsi
+++ b/arch/arm64/boot/dts/rockchip/px30.dtsi
@@ -609,14 +609,13 @@
 	        #address-cells = <1>;
 	        #size-cells = <0>;
 		status = "okay";
-
-	        spidev1@0 {
-	                compatible = "spidev";
-	                spi-max-frequency = <500000>;
-	                reg = <0>;
-	                #address-cells = <1>;
-	                #size-cells = <0>;
-	        };
+                flash: XT25F128B@0 {
+                        #address-cells = <1>;
+                        #size-cells = <1>;
+                        compatible = "XT25F128B","jedec,spi-nor";
+                        reg = <0>;
+                        spi-max-frequency = <500000>;
+                };
 	};
 
 	wdt: watchdog@ff1e0000 {
