--- a/arch/arm64/boot/dts/rockchip/rk3326-odroid-go3.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3326-odroid-go3.dts
@@ -90,6 +90,11 @@
 				gpios = <&gpio2 RK_PA2 GPIO_ACTIVE_LOW>;
 				linux,code = <KEY_LEFTMETA>; // 0x2c2
 			};
+			button@3 {
+				label = "HP detection";
+				gpios = <&gpio2 RK_PC6 GPIO_ACTIVE_LOW>;
+				linux,code = <KEY_SOUND>;
+			};
         };
 
 	joypad {
@@ -232,8 +237,8 @@
                         "MIC_IN", "Mic Jack",
                         "Headphone Jack", "HPOL",
                         "Headphone Jack", "HPOR";
-                simple-audio-card,hp-det-gpio = <&gpio2 RK_PC6 GPIO_ACTIVE_LOW>;
-                simple-audio-card,codec-hp-det = <1>;
+                //simple-audio-card,hp-det-gpio = <&gpio2 RK_PC6 GPIO_ACTIVE_LOW>;
+                //simple-audio-card,codec-hp-det = <1>;
                 simple-audio-card,cpu {
                         sound-dai = <&i2s1_2ch>;
                 };
