--- a/arch/arm64/boot/dts/rockchip/rk3326-odroid-go3.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3326-odroid-go3.dts
@@ -157,50 +157,50 @@
                         label = "GPIO BTN-X";
                         linux,code = <BTN_NORTH>; // 0x133
                 };
-                sw12 {
+                sw9 {
                         gpios = <&gpio2 RK_PA3 GPIO_ACTIVE_LOW>;
                         label = "GPIO F4";
-                        linux,code = <BTN_TRIGGER_HAPPY4>; // 0x2c3
+                        linux,code = <BTN_THUMBL>; // 0x2c3
                 };
-                sw13 {
+                sw10 {
                         gpios = <&gpio2 RK_PA4 GPIO_ACTIVE_LOW>;
                         label = "GPIO F5";
-                        linux,code = <BTN_TRIGGER_HAPPY5>; // 0x2c4
+                        linux,code = <BTN_THUMBR>; // 0x2c4
                 };
-                sw14 {
+                sw11 { // UNUSED
                         gpios = <&gpio2 RK_PA5 GPIO_ACTIVE_LOW>;
                         label = "GPIO F6";
                         linux,code = <BTN_TRIGGER_HAPPY6>; // 0x13c
                 };
-                sw15 {
+                sw12 {
                         gpios = <&gpio2 RK_PA6 GPIO_ACTIVE_LOW>;
                         label = "GPIO TOP-LEFT";
                         linux,code = <BTN_TL>; // 0x02
                 };
-                sw16 {
+                sw13 {
                         gpios = <&gpio2 RK_PA7 GPIO_ACTIVE_LOW>;
                         label = "GPIO TOP-RIGHT";
                         linux,code = <BTN_TR>; // 0x05
                 };
-                sw19 {
+                sw14 {
                         gpios = <&gpio3 RK_PB1 GPIO_ACTIVE_LOW>;
-                        label = "GPIO F1";
-                        linux,code = <BTN_TRIGGER_HAPPY1>;
+                        label = "GPIO SELECT";
+                        linux,code = <BTN_SELECT>;
                 };
-                sw20 {
+                sw15 {
+                        gpios = <&gpio3 RK_PB4 GPIO_ACTIVE_LOW>;
+                        label = "GPIO F2";
+                        linux,code = <BTN_START>;
+                };
+                sw16 {
                         gpios = <&gpio3 RK_PB7 GPIO_ACTIVE_LOW>;
                         label = "GPIO TOP-RIGHT2";
                         linux,code = <BTN_TR2>;
                 };
-                sw21 {
+                sw17 {
                         gpios = <&gpio3 RK_PB2 GPIO_ACTIVE_LOW>;
                         label = "GPIO TOP-LEFT2";
                         linux,code = <BTN_TL2>;
-                };
-                sw22 {
-                        gpios = <&gpio3 RK_PB4 GPIO_ACTIVE_LOW>;
-                        label = "GPIO F2";
-                        linux,code = <BTN_TRIGGER_HAPPY2>;
                 };
 	};
 
