--- a/arch/arm64/boot/dts/rockchip/px30.dtsi
+++ b/arch/arm64/boot/dts/rockchip/px30.dtsi
@@ -992,6 +992,64 @@
 		status = "disabled";
 	};
 
+	gpu_opp_table: opp-table2 {
+                compatible = "operating-points-v2";
+
+                rockchip,thermal-zone = "soc-thermal";
+                rockchip,temp-hysteresis = <5000>;
+                rockchip,low-temp = <0>;
+                rockchip,low-temp-min-volt = <1000000>;
+                rockchip,low-temp-adjust-volt = <
+                        /* MHz    MHz    uV */
+                        0      480     50000
+                >;
+
+                rockchip,max-volt = <1175000>;
+                rockchip,evb-irdrop = <25000>;
+
+                rockchip,pvtm-voltage-sel = <
+                        0        50000   0
+                        50001    54000   1
+                        54001    60000   2
+                        60001    99999   3
+                >;
+                rockchip,pvtm-ch = <0 0>;
+
+                opp-200000000 {
+                        opp-hz = /bits/ 64 <200000000>;
+                        opp-microvolt = <950000>;
+                        opp-microvolt-L0 = <950000>;
+                        opp-microvolt-L1 = <950000>;
+                        opp-microvolt-L2 = <950000>;
+                        opp-microvolt-L3 = <950000>;
+                };
+                opp-300000000 {
+                        opp-hz = /bits/ 64 <300000000>;
+                        opp-microvolt = <975000>;
+                        opp-microvolt-L0 = <975000>;
+                        opp-microvolt-L1 = <950000>;
+                        opp-microvolt-L2 = <950000>;
+                        opp-microvolt-L3 = <950000>;
+                };
+                opp-400000000 {
+                        opp-hz = /bits/ 64 <400000000>;
+                        opp-microvolt = <1050000>;
+                        opp-microvolt-L0 = <1050000>;
+                        opp-microvolt-L1 = <1025000>;
+                        opp-microvolt-L2 = <975000>;
+                        opp-microvolt-L3 = <950000>;
+                };
+                opp-480000000 {
+                        opp-hz = /bits/ 64 <480000000>;
+                        opp-microvolt = <1125000>;
+                        opp-microvolt-L0 = <1125000>;
+                        opp-microvolt-L1 = <1100000>;
+                        opp-microvolt-L2 = <1050000>;
+                        opp-microvolt-L3 = <1000000>;
+                };
+        };
+
+
 	gpu: gpu@ff400000 {
 		compatible = "rockchip,px30-mali", "arm,mali-bifrost";
 		reg = <0x0 0xff400000 0x0 0x4000>;
@@ -1002,6 +1060,7 @@
 		clocks = <&cru SCLK_GPU>;
 		#cooling-cells = <2>;
 		power-domains = <&power PX30_PD_GPU>;
+		operating-points-v2 = <&gpu_opp_table>;
 		status = "disabled";
 	};
 
